--- a/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
@@ -31,8 +31,14 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="All">All</a>
                         </li>
+                        @if (this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Add">Add</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -46,17 +52,14 @@
         </main>
     </div>
 
-    <footer class="border-top footer border-0 bg-dark text-muted"">
-        <div class="container">
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    <partial name="_FooterPartial"/>
 
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/lib/popper/popper.min.js" asp-append-version="true"></script>
+
     <script src="~/js/site.min.js" asp-append-version="true"></script>
     <script src="~/js/lazy.js" asp-append-version="true"></script>
     @await this.RenderSectionAsync("Scripts", required: false)
