--- a/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
@@ -4,42 +4,30 @@
     this.ViewData["Title"] = "All Products";
 }
 
-<h1 class="text-white">@this.ViewData["Title"]</h1>
-
-<div class="row">
-    @foreach (var product in this.Model.Products)
-    {
-        <div class="card col-md-4">
-            <div class="card-header">
-                <img class="card-img" width="100" src="@product.ImageUrl" alt="...">
-            </div>
-            <div class="card-body">
-                <h4 class="card-title mt-2">@product.Name</h4>
-                <hr />
-                <h5 class="card-title mt-2">@product.Price</h5>
-            </div>
-            <div class="card-footer">
-                <a href="#a" class="btn btn-primary">Details</a>
-            </div>
-        </div>
-    }
-</div>
+<h1 class="text-warning">@this.ViewData["Title"]</h1>
 
 <hr />
-<ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-        <a class="page-link" href="#a"><i class="fas fa-long-arrow-alt-left"></i></a>
-    </li>
-    <li class="page-item active">
-        <a class="page-link" href="#a">1</a>
-    </li>
-    <li class="page-item">
-        <a class="page-link" href="#a">2</a>
-    </li>
-    <li class="page-item">
-        <a class="page-link" href="#a">3</a>
-    </li>
-    <li class="page-item">
-        <a class="page-link" href="#a"><i class="fas fa-long-arrow-alt-right"></i></a>
-    </li>
-</ul>
+<partial name="_PagingPartial" model="@Model">
+<hr />
+    <div class="row">
+        @foreach (var product in this.Model.Products)
+        {
+            <div class="card col-md-4">
+                <div class="card-header">
+                    <img class="card-img" width="100" src="@product.ImageUrl" alt="...">
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title mt-2">@product.Name</h4>
+                    <hr />
+                    <h5 class="card-title mt-2">@product.Price</h5>
+                </div>
+                <div class="card-footer">
+                    <a href="#a" class="btn btn-warning">Details</a>
+                </div>
+            </div>
+        }
+    </div>
+
+    <hr />
+    <partial name="_PagingPartial" model="@Model">
+
