--- a/Web/ComputerPartsCatalog.Web/Views/Products/Add.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Add.cshtml
@@ -4,7 +4,7 @@
     var categories = this.Model.Categories.Select(x => new SelectListItem(x.Value, x.Key));
 }
 
-<form method="post" class="col-md-6 offset-md-3">
+<form method="post" class="col-md-6 offset-md-3" enctype="multipart/form-data">
     <h1 class="text-white">@this.ViewData["Title"]</h1>
     <div class="text-danger" asp-validation-summary="All"></div>
     <div class="form-group">
@@ -28,6 +28,11 @@
             <option selected>Please select an option</option>
         </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label class="text-white" asp-for="Images"></label>
+        <input asp-for="Images" class="form-control" />
+        <span asp-validation-for="Images" class="text-danger"></span>
     </div>
     <div class="form-group" id="FeaturesContainer">
         <label class="text-white" asp-for="Features"></label>
