--- a/Web/ComputerPartsCatalog.Web/Views/Products/Add.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Add.cshtml
@@ -23,6 +23,11 @@
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label class="text-white" asp-for="Description"></label>
+        <textarea asp-for="Description" class="form-control" rows="5"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <label class="text-white" asp-for="CategoryId"></label>
         <select asp-for="CategoryId" class="custom-select" asp-items="categories">
             <option selected>Please select an option</option>
@@ -30,9 +35,9 @@
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
     <div class="form-group">
-            <label class="text-white" asp-for="Image"></label>
-            <input asp-for="Image" class="form-control" />
-            <span asp-validation-for="Image" class="text-danger"></span>
+        <label class="text-white" asp-for="Image"></label>
+        <input asp-for="Image" class="form-control" />
+        <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <div class="form-group" id="FeaturesContainer">
         <label class="text-white" asp-for="Features"></label>
