--- a/Web/ComputerPartsCatalog.Web/Views/Products/Details.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Details.cshtml
@@ -16,19 +16,20 @@
                 <h2 class="title">@Model.Name</h2>
                 <hr />
                 <div class="rating-wrap my-3">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                </div> <!-- rating-wrap.// -->
+                    <span class="fa fa-star" data-vote="1"></span>
+                    <span class="fa fa-star" data-vote="2"></span>
+                    <span class="fa fa-star" data-vote="3"></span>
+                    <span class="fa fa-star" data-vote="4"></span>
+                    <span class="fa fa-star" data-vote="5"></span>
+                    <span id="averageRatingValue">@Model.AverageRating.ToString("0.0")</span><span> / 5</span>
+                </div>  <!--rating-wrap.-->
                 <hr />
                 <div class="mb-3">
                     <var class="price h4">Price: @Model.Price$</var>
                 </div>
                 <hr />
                 <!-- description --> <!-- Model.Description -->
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                <p>@Model.Description</p>
                 <hr />
                 <h5>Technical Description:</h5>
                 <dl class="row">
@@ -43,7 +44,33 @@
                 <div class="form-group text-center">
                     <a href="#" class="btn  btn-outline-warning"> <span class="text-dark">Add to cart</span> <i class="fas fa-shopping-cart"></i> </a>
                 </div>
-            </article> 
+            </article>
         </main> <!-- col.// -->
     </div> <!-- row.// -->
 </div> <!-- card.// -->
+<form method="post" id="antiForgeryForm"></form>
+@section Scripts {
+    <script>
+        $("span[data-vote]").each(function (el) {
+            $(this).click(function () {
+                var value = $(this).attr("data-vote");
+                var productId = @Model.Id;
+                var antiForgeryToken = $('#antiForgeryForm input[name=__RequestVerificationToken]').val();
+                var data = { productId: productId, value: value };
+
+                $.ajax({
+                    type: "POST",
+                    url: "/api/Ratings",
+                    data: JSON.stringify(data),
+                    headers: {
+                        'X-CSRF-TOKEN': antiForgeryToken
+                    },
+                    success: function (data) {
+                        $('#averageRatingValue').html(data.averageRating.toFixed(1));
+                    },
+                    contentType: 'application/json',
+                });
+            })
+        });
+    </script>>
+}
