--- a/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Dashboard/Index.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Dashboard/Index.cshtml
@@ -3,5 +3,8 @@
     this.ViewData["Title"] = "Admin dashboard";
 }
 
-<h1>@this.ViewData["Title"]</h1>
-Settings: @this.Model.SettingsCount
+<h1 class="text-white text-center">@this.ViewData["Title"]</h1>
+<div>
+    <a asp-area="Administration" asp-controller="Categories" asp-action="Index" class="list-group-item list-group-item-action bg-light">Categories</a>
+    <a asp-area="" asp-controller="Products" asp-action="Add" class="list-group-item list-group-item-action bg-light">Products</a>
+</div>
