--- a/Web/ComputerPartsCatalog.Web/Views/Products/Add.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Add.cshtml
@@ -44,7 +44,7 @@
         <a class="btn btn-success" onclick="AddMoreFeatures()">Add More</a>
     </div>
 
-    <input type="submit" class="btn btn-info" />
+    <input type="submit" class="btn btn-primary" />
 </form>
 
 @section Scripts {
