--- a/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
@@ -33,18 +33,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="All">All</a>
                         </li>
-                        @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                        @*@if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Add">Add</a>
                             </li>
                         }
+                        @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="Administration" asp-controller="Categories" asp-action="Index">Categories Admin</a>
+                            </li>
+                        }*@
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
     <div class="container">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
