--- a/Web/ComputerPartsCatalog.Web/Views/Home/Index.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Home/Index.cshtml
@@ -5,9 +5,20 @@
 }
 
 <div class="text-center row">
-    <h1 class="display-4 text-white">Welcome to </h1><h1 class="text-warning"> @GlobalConstants.SystemName!</h1>
-
+    <h1 class="display-4 text-white">Welcome to <span class="text-warning">@GlobalConstants.SystemName</span>!</h1>
+    <div class="col-md-4">
+        <hr />
+        <ul class="list-group">
+            <li class="list-group-item">Dekstops</li>
+            <li class="list-group-item">Dekstops</li>
+            <li class="list-group-item">Dekstops</li>
+            <li class="list-group-item">Dekstops</li>
+            <li class="list-group-item">Dekstops</li>
+            <li class="list-group-item">Dekstops</li>
+        </ul>
+    </div>
     <div class="col-md-8">
+        <hr />
         <div class="row">
             @foreach (var product in this.Model.Products)
             {
@@ -28,14 +39,5 @@
             }
         </div>
     </div>
-    <div class="col-md-4">
-        <ul class="list-group">
-            <li class="list-group-item">Dekstops</li>
-            <li class="list-group-item">Dekstops</li>
-            <li class="list-group-item">Dekstops</li>
-            <li class="list-group-item">Dekstops</li>
-            <li class="list-group-item">Dekstops</li>
-            <li class="list-group-item">Dekstops</li>
-        </ul>
-    </div>
 </div>
+<hr />
