--- a/Web/ComputerPartsCatalog.Web/Views/Products/Details.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Details.cshtml
@@ -1,6 +1,7 @@
-﻿@model ComputerPartsCatalog.Web.ViewModels.Products.ProductDetailsViewModel
+﻿@using ComputerPartsCatalog.Common;
+@model ComputerPartsCatalog.Web.ViewModels.Products.ProductDetailsViewModel
 @{
-    this.ViewData["Title"] = Model.Name;
+this.ViewData["Title"] = Model.Name;
 }
 <div class="card">
     <div class="row">
@@ -43,7 +44,14 @@
                 <!-- add to cart button -->
                 <div class="form-group text-center">
                     <a href="#" class="btn  btn-outline-warning"> <span class="text-dark">Add to cart</span> <i class="fas fa-shopping-cart"></i> </a>
+                    @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                    {
+                        <span>
+                            <a asp-controller="Products" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Edit</a>
+                        </span>
+                    }
                 </div>
+
             </article>
         </main> <!-- col.// -->
     </div> <!-- row.// -->
