--- a/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Products/Edit.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Products/Edit.cshtml
@@ -54,8 +54,8 @@
                 Do you want to save current changes?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="editForm.submit()">Save changes</button>
+                <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-primary" onclick="editForm.submit()">Save changes</button>
             </div>
         </div>
     </div>
