--- a/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Categories/Index.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Categories/Index.cshtml
@@ -44,8 +44,8 @@
                 @Html.DisplayFor(modelItem => item.ModifiedOn)
             </td>
             <td>
-                <a class="text-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a class="text-info" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a class="text-info" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a class="text-warning" asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a class="text-danger"asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
