--- a/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Dashboard/Index.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Dashboard/Index.cshtml
@@ -6,5 +6,5 @@
 <h1 class="text-white text-center">@this.ViewData["Title"]</h1>
 <div>
     <a asp-area="Administration" asp-controller="Categories" asp-action="Index" class="list-group-item list-group-item-action bg-light">Categories</a>
-    <a asp-area="" asp-controller="Products" asp-action="Add" class="list-group-item list-group-item-action bg-light">Products</a>
+    <a asp-area="Administration" asp-controller="Products" asp-action="Add" class="list-group-item list-group-item-action bg-light">Products</a>
 </div>
