--- a/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="All">All Products</a>
                         </li>
+                        <li>
+                            <partial name="_SearchBarPartial"/>
+                        </li>
                     </ul>
                 </div>
             </div>
