--- a/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
@@ -9,14 +9,7 @@
 <partial name="_PagingPartial" model="@Model">
     <div class="text-center row">
         <div class="col-md-4">        
-            <ul class="list-group">
-                <li class="list-group-item">Dekstops</li>
-                <li class="list-group-item">Dekstops</li>
-                <li class="list-group-item">Dekstops</li>
-                <li class="list-group-item">Dekstops</li>
-                <li class="list-group-item">Dekstops</li>
-                <li class="list-group-item">Dekstops</li>
-            </ul>
+            @await Component.InvokeAsync("CategoryList"); 
         </div>
         <div class="col-md-8">         
             <div class="row">
