--- a/Web/ComputerPartsCatalog.Web/Views/Products/Category.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Category.cshtml
@@ -1,17 +1,10 @@
-﻿@using ComputerPartsCatalog.Common
-@model ComputerPartsCatalog.Web.ViewModels.Home.IndexPageViewModel
-@{
-    this.ViewData["Title"] = "Home Page";
-}
+﻿@model ComputerPartsCatalog.Web.ViewModels.Categories.CategoryViewModel
 
 <div class="text-center row">
-    <h1 class="display-4 text-white">Welcome to <span class="text-warning">@GlobalConstants.SystemName</span>!</h1>
     <div class="col-md-4">
-        <hr />
-        @await Component.InvokeAsync("CategoryList"); 
+        @await Component.InvokeAsync("CategoryList");
     </div>
     <div class="col-md-8">
-        <hr />
         <div class="row">
             @foreach (var product in this.Model.Products)
             {
@@ -33,4 +26,3 @@
         </div>
     </div>
 </div>
-<hr />
