--- a/Web/ComputerPartsCatalog.Web/Views/Home/Index.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4 text-white">Welcome to <span class="text-warning">@GlobalConstants.SystemName</span>!</h1>
     <div class="col-md-4">
         <hr />
-        @await Component.InvokeAsync("CategoryList"); 
+        <vc:category-list />
     </div>
     <div class="col-md-8">
         <hr />
