--- a/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
@@ -9,7 +9,7 @@
 <partial name="_PagingPartial" model="@Model">
     <div class="text-center row">
         <div class="col-md-4">        
-            @await Component.InvokeAsync("CategoryList"); 
+            <vc:category-list/>
         </div>
         <div class="col-md-8">         
             <div class="row">
