--- a/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/All.cshtml
@@ -4,7 +4,7 @@
     this.ViewData["Title"] = "All Products";
 }
 
-<h1 class="display-4 text-warning text-center">@this.ViewData["Title"]</h1>
+<h1 class="display-4 text-white text-center">@this.ViewData["Title"]</h1>
 <hr />
 <partial name="_PagingPartial" model="@Model">
     <div class="text-center row">
