--- a/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <title>@this.ViewData["Title"] - @GlobalConstants.SystemName</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
     <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/lazy.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/lazy.css" asp-append-version="true">
     <style>
         body {
             background-image: url(/img/background.jpg);
@@ -33,7 +33,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="All">All Products</a>
                         </li>
                         <li>
-                            <partial name="_SearchBarPartial"/>
+                            <partial name="_SearchBarPartial" />
                         </li>
                     </ul>
                 </div>
@@ -47,7 +47,7 @@
         </main>
     </div>
 
-    <partial name="_FooterPartial"/>
+    <partial name="_FooterPartial" />
 
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
