add server side validation

--- a/Web/ComputerPartsCatalog.Web/Views/Products/Details.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Products/Details.cshtml
@@ -36,7 +36,7 @@
                 <dl class="row">
                     @foreach (var feature in Model.ProductFeatures)
                     {
-                        <dt class="col-md-6">@feature.FeatureName:</dt>
+                        <dt class="col-md-6">@feature.FeatureName</dt>
                         <dd class="col-md-6">@feature.FeatureType</dd>
                     }
                 </dl>
