--- a/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Categories/Details.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Areas/Administration/Views/Categories/Details.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class="text-white">Details</h1>
 
 <div>
-    <h4>Category</h4>
+    <h4 class="text-white">Category</h4>
     <hr />
-    <dl class="row">
+    <dl class="row text-white">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
