--- a/Web/ComputerPartsCatalog.Web/Views/Home/Index.cshtml
+++ b/Web/ComputerPartsCatalog.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center row">
-    <h1 class="display-4 text-white">Hi to <span class="text-warning">@GlobalConstants.SystemName</span>!</h1>
+    <h1 class="display-4 text-white">Welc3me to <span class="text-warning">@GlobalConstants.SystemName</span>!</h1>
     <div class="col-md-4">
         <hr />
         <vc:category-list />
